--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "prefer-stable": true,
     "require": {
         "php" : "~7.1",
-        "getpop/api-graphql": "^1.0@dev"
+        "getpop/api-graphql": "^1.0@dev",
+        "youshido/graphql": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
