--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,4 +1,9 @@
 services:
+    _defaults:
+        bind:
+            PoP\Translation\TranslationAPIInterface: '@translation_api'
+            PoP\ComponentModel\Schema\FeedbackMessageStoreInterface: '@feedback_message_store'
+
     graphql_query_convertor:
         class: \PoP\GraphQLAPIQuery\Schema\GraphQLQueryConvertor
         public: true
