--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php" : "~7.1",
         "getpop/field-query": "^1.0@dev",
+        "getpop/engine": "^1.0@dev",
         "getpop/api-graphql": "^1.0@dev",
         "youshido/graphql": "^1.7"
     },
