--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,30 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "getpop/graphql-parser",
+                "version": "dev-master",
+                "source": {
+                    "type" : "git",
+                    "url" : "https://github.com/getpop/graphql-parser.git",
+                    "reference" : "master"
+                },
+                "dist": {
+                    "url": "https://github.com/getpop/graphql-parser/archive/master.zip",
+                    "type": "zip"
+                }
+            }
+        }
+    ],
     "require": {
         "php" : "~7.1",
         "getpop/field-query": "^1.0@dev",
         "getpop/engine": "^1.0@dev",
         "getpop/api-graphql": "^1.0@dev",
-        "youshido/graphql": "^1.7"
+        "getpop/graphql-parser": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
