--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,5 +5,5 @@ services:
             PoP\ComponentModel\Schema\FeedbackMessageStoreInterface: '@feedback_message_store'
 
     graphql_query_convertor:
-        class: \PoP\GraphQLAPIQuery\Schema\GraphQLQueryConvertor
+        class: \GraphQLByPoP\GraphQLAPIQuery\Schema\GraphQLQueryConvertor
         public: true
