--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
     "name": "graphql-by-pop/graphql-query",
     "type": "library",
     "description": "Utilities to transform the query from the GraphQL syntax to the Field query syntax",
-    "keywords": [
-        "PoP",
-        "graphql-query"
-    ],
+    "keywords": ["PoP", "graphql-query"],
     "homepage": "https://github.com/GraphQLByPoP/graphql-query",
     "license": "MIT",
     "authors": [
@@ -27,7 +24,7 @@
     "require-dev": {
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": ">=9.3",
-        "rector/rector": "^0.8.17",
+        "rector/rector": "^0.9",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
@@ -45,7 +42,7 @@
         "check-style": "phpcs src tests",
         "fix-style": "phpcbf src tests",
         "analyse": "phpstan analyse -c phpstan.neon.dist",
-        "downgrade-code": "rector process --dry-run --ansi"
+        "preview-code-downgrade": "rector process --dry-run --ansi"
     },
     "extra": {
         "branch-alias": {
